// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should support custom active and value 1`] = `
<div class="fect-tabs_container">
  <header class="tabs_header "></header>
  <div class="fect-tab_wrapper ">
    <!---->
  </div>
  <div class="fect-tab_wrapper none">
    <!---->
  </div>
</div>
`;

exports[`Tabs should support hide divider 1`] = `
<div class="fect-tabs_container">
  <header class="tabs_header hide-divider"></header>
  <div class="fect-tab_wrapper ">
    <!---->
  </div>
</div>
`;
